--- a/alura-timer/app/index.html
+++ b/alura-timer/app/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
     <h1>Olá sou uma Janela!</h1>
+
+    <a id="link-sobre" href="#">Sobre</a>
+
 </body>
 <script src="js/renderer.js"></script>
 </html>
